# Playbook

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Manager.cc.7B75EE05DD44AC6B.idx  Manager.h.D50A6BC963818F80.idx  Player.cc.1044012767C72005.idx  Player.h.09318D46E975EEF8.idx  ScoringRules.cc.78E817C44BFAF5C1.idx  ScoringRules.h.7A67BC9FF6B58733.idx  StatLine.cc.623F0D566B63504A.idx  StatLine.h.2536F634B47633BD.idx  __bit_reference.9ECFBDDEEFAAADDB.idx  __config.2D108650B6E0EB01.idx  __hash_table.273B1914ADD98380.idx  __locale.525CFF2AE84D8395.idx  __node_handle.0D6DACC55A621988.idx  __split_buffer.E03237736B262A1A.idx  _rsize_t.h.5851734EDEE2DCE8.idx  _string.h.53ED36F89CE7C51B.idx  access.h.8EC266844393D990.idx  add_const.h.66142D4E55C9CA13.idx  adjacent_find.h.8923C1931998B155.idx  advance.h.0CB5C98BF9E52D33.idx  algorithm.3410E0246DC412DF.idx  aliasing_iterator.h.EE0C7C80D13BFA21.idx  aligned_storage.h.E745433A220945CB.idx  all_of.h.5686B5E83A7DD409.idx  allocate_at_least.h.173F66D8E03DC128.idx  allocation_guard.h.F5ECAB7AF0A546C1.idx  allocator.h.8F7E32DF3F1B563C.idx  allocator_traits.h.EE0EE2BF7E056ACC.idx  any_of.h.D611B5FA31F37BB6.idx  array.5DF1FCA9943240E8.idx  assert.h.9BE910F3E554F5C0.idx  atomic.h.717C4F890B8FD70E.idx  atomic_base.h.B965D3C570E80E6A.idx  atomic_sync.h.03D0300DCEEB5B73.idx  back_insert_iterator.h.29B1254F41A49212.idx  basic_ostream.h.8ABC7EFF58A84525.idx  binary_search.h.E6DAD883C47E6EB2.idx  (+334 more)
include/: League.h  Manager.h  Player.h  ScoringRules.h  StatLine.h
src/: Manager.cc  Player.cc  ScoringRules.cc  main.cc
